--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pong"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" 
+     >
 
     <uses-sdk
         android:minSdkVersion="12"
@@ -15,6 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.pong.Pong"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +32,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.pong.Pong" />
         </activity>
+       
     </application>
 
 </manifest>
